--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,9 @@
   opacity: 0.01;
   transition: opacity 1000ms ease-in;
 }
+.list-group-item {
+  line-height: 2;
+}
+/* .nav:last-child {
+  justify-content: end;
+} */
