--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Gajraj+One&family=Rubik+Moonrocks&display=swap");
+
+:root {
+  --color-blue: #654cea;
+  --color-pink: #ea4c82;
+  --color-green: #d1ea4c;
+  --color-turquois: #4ceab4;
+  --font-title: "Rubik Moonrocks", cursive;
+  --font-body: "Fredoka One", sans-serif;
+  /* font-family: 'Fredoka One', cursive;
+font-family: 'Gajraj One', cursive;
+font-family: 'Rubik Moonrocks', cursive; */
+}
+* {
+  font-family: var(--font-body);
+}
+h1 {
+  font-family: var(--font-title);
+  color: var(--color-green);
+  font-size: 80px;
+}
+
+body > div {
+  min-height: 100vh;
+  background-color: var(--color-blue);
+}
+
 .remove-btn {
-  /* margin-right: 0.5rem; */
   border-radius: 0.1rem;
   color: #3d3d3d;
   background-color: white;
   padding: 0.5rem 2.5rem;
-
-  /* font-size: 1.5rem; */
 }
 .remove-btn:hover {
   background-color: red;
@@ -34,11 +58,28 @@
   border: 0;
   border-bottom: 1px solid #dee2e6;
 }
+
+.welcome-message {
+  color: var(--color-green);
+  text-transform: uppercase;
+  font-size: 16px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  display: block;
+}
+
 .nav-link {
   cursor: pointer;
   user-select: none;
-  /* line-height: 2; */
+  color: var(--color-green);
+  text-transform: uppercase;
+  font-size: 16px;
 }
+
+.nav-link:hover {
+  color: var(--color-pink);
+}
+
 .tab-content {
   border-right: 1px solid #dee2e6;
   border-left: 1px solid #dee2e6;
@@ -50,6 +91,7 @@
   border-radius: 0.1rem;
   background-color: rgb(107, 142, 35);
 }
+
 .new-btn:hover {
   background-color: rgba(107, 142, 35, 0.8);
 }
@@ -58,10 +100,35 @@
   padding: 0;
   text-align: center;
   width: 25px;
-
   height: 25px;
 }
 
 .add-item-btn {
   margin-left: 1rem;
+}
+
+.b-b-pink {
+  border-bottom: 3px solid var(--color-pink);
+}
+
+.bg-blue {
+  background-color: var(--color-blue);
+}
+
+button.hamburger {
+  margin-left: auto;
+}
+/* @media (min-width: 768px) {
+  button.hamburger {
+    display: none;
+  }
+} */
+button.hamburger:focus {
+  outline: none;
+}
+
+.hamburger-inner,
+.hamburger-inner::before,
+.hamburger-inner::after {
+  background-color: var(--color-pink) !important;
 }
