--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,22 +19,26 @@ h1 {
   color: var(--color-green);
   font-size: 80px;
 }
-
+body {
+  color: var(--color-pink);
+}
 body > div {
   min-height: 100vh;
   background-color: var(--color-blue);
 }
 
 .remove-btn {
-  border-radius: 0.1rem;
-  color: #3d3d3d;
-  background-color: white;
-  padding: 0.5rem 2.5rem;
+  border-radius: 0;
+  color: var(--color-green);
+  background-color: var(--color-pink);
+  padding: 10px;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 .remove-btn:hover {
-  background-color: red;
   color: white;
-  border-color: black;
+  background-color: var(--color-pink);
+  /* border-color: black; */
   opacity: 0.7;
 }
 
@@ -56,7 +60,10 @@ body > div {
   padding: 0.25rem 1rem 1rem 1rem;
   margin-top: 1rem;
   border: 0;
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 3px solid var(--color-pink);
+  background-color: var(--color-blue);
+  color: var(--color-green);
+  font-size: 20px;
 }
 
 .welcome-message {
@@ -73,7 +80,15 @@ body > div {
   user-select: none;
   color: var(--color-green);
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 27px;
+}
+@media (min-width: 768px) {
+  .welcome-message .nav-link {
+    font-size: 27px;
+  }
+  .nav-link {
+    font-size: 16px;
+  }
 }
 
 .nav-link:hover {
@@ -81,26 +96,29 @@ body > div {
 }
 
 .tab-content {
-  border-right: 1px solid #dee2e6;
-  border-left: 1px solid #dee2e6;
+  border-right: 3px solid var(--color-pink);
+  border-left: 3px solid var(--color-pink);
   padding: 1.5rem;
   min-height: calc(100vh - 154px);
 }
 
 .new-btn {
   border-radius: 0.1rem;
-  background-color: rgb(107, 142, 35);
+  background-color: var(--color-green);
+  color: var(--color-pink);
+  /* font-size: 15px; */
+  line-height: 1;
 }
 
 .new-btn:hover {
-  background-color: rgba(107, 142, 35, 0.8);
+  background-color: var(--color-pink);
 }
 
 .small-btn {
   padding: 0;
   text-align: center;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 }
 
 .add-item-btn {
@@ -108,7 +126,7 @@ body > div {
 }
 
 .b-b-pink {
-  border-bottom: 3px solid var(--color-pink);
+  border-bottom: 5px solid var(--color-pink);
 }
 
 .bg-blue {
@@ -118,11 +136,7 @@ body > div {
 button.hamburger {
   margin-left: auto;
 }
-/* @media (min-width: 768px) {
-  button.hamburger {
-    display: none;
-  }
-} */
+
 button.hamburger:focus {
   outline: none;
 }
@@ -131,4 +145,78 @@ button.hamburger:focus {
 .hamburger-inner::before,
 .hamburger-inner::after {
   background-color: var(--color-pink) !important;
+}
+
+.modal-content {
+  background-color: var(--color-blue);
+  border: 3px solid var(--color-pink);
+  color: var(--color-green);
+  /* font-weight: 600; */
+}
+.modal-title {
+  /* font-weight: 600; */
+}
+.form-control {
+  background-color: var(--color-blue);
+  color: var(--color-green);
+  border-color: var(--color-pink);
+}
+.form-control::placeholder {
+  color: var(--color-green);
+  /* font-weight: 600; */
+}
+
+.form-control:focus {
+  background-color: var(--color-blue);
+  color: var(--color-green);
+  /* font-weight: 600; */
+  /* background-color: #fff; */
+  border-color: var(--color-pink);
+  box-shadow: 0px 0px 7px 1px #fff;
+}
+.modal-header {
+  border-bottom: 2px solid var(--color-pink);
+}
+.btn.btn-secondary.btn-block {
+  background-color: var(--color-green);
+  color: var(--color-pink);
+}
+.close {
+  color: var(--color-pink);
+  text-shadow: none;
+  opacity: 1;
+}
+.nav-tabs {
+  border-bottom: 3px solid var(--color-pink);
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  background-color: var(--color-blue);
+  color: var(--color-green);
+  border-color: var(--color-pink);
+  border-width: 3px;
+  border-bottom: none;
+}
+.add-item-btn {
+  padding: 15px 20px;
+  text-transform: uppercase;
+  margin-left: auto;
+  display: block;
+}
+
+.btn {
+  text-transform: uppercase;
+}
+
+.btn.btn-secondary.btn-block {
+  padding: 15px 20px;
+}
+.btn-secondary.focus,
+.btn-secondary:focus {
+  color: var(--color-green);
+  background-color: var(--color-pink);
+  border-color: var(--color-pink);
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+  border-radius: 0px;
 }
