--- a/client/src/hamburgers.css
+++ b/client/src/hamburgers.css
@@ -34,9 +34,10 @@
 
 .hamburger-box {
   width: 40px;
-  height: 24px;
+  height: 30px;
   display: inline-block;
   position: relative;
+  margin-top: 5px;
 }
 
 .hamburger-inner {
@@ -48,9 +49,9 @@
 .hamburger-inner::before,
 .hamburger-inner::after {
   width: 40px;
-  height: 4px;
+  height: 5px;
   background-color: #000;
-  border-radius: 4px;
+  border-radius: 0px;
   position: absolute;
   transition-property: transform;
   transition-duration: 0.15s;
@@ -65,7 +66,7 @@
   top: -10px;
 }
 .hamburger-inner::after {
-  bottom: -10px;
+  bottom: -13px;
 }
 
 /*
